Changes for 1.5.3
* Fixed issue with battles showing who won twice in the history panel. (veqryn)

* Moving BattleRecord to its own class, and having BattleRecord, BattleRecords, and BattleResults all extend GameDataComponent. (veqryn)

* Possibly fixing the problems with Edit Mode, by fixing a previous refactoring that switched two variables up. (veqryn)

* Possibly fixing the problems with Edit Mode, by abstracting BasePersistentDelegate and separating EditDelegate from BaseDelegate. (veqryn)

* Generating Serial IDs for all classes that may need them. (veqryn)


Changes for 1.5.2.1
* Updated 1940 test xml to allow Axis powers to declare war on Americans separately, and for Americans to declare war on each Axis power separately. (veqryn)

* Fixed null pointer error in Dynamix AI's determining of where to put a factory. (veqryn)

* Having the default loaded game be loaded separately from the game chooser list, and putting the loading of the list into a separate thread. (veqryn & frigoref)

* Removing game chooser list from memory when we start a game, or join a game, or join the lobby. (veqryn & frigoref)

* Removed restriction of not being able to land in land territories with pending battles (there is still a restriction of course on who owns the territory, and whether it was conquered this turn or not). (veqryn) 

* Fixing possible error with using overriden placement delegates that were not triplea placement delegates, like using twoIfBySea place delegates. (frigoref)

* Fixing bug where a territory that was taken without a fight, could still trigger a scrambling, with the wrong player selecting who scrambles. (veqryn)

* Allowing air to end their movement over sea zones containing enemy units, if you own or will place a carrier there. (veqryn)

* Disallowing new usernames for lobby if they match case insensitive an existing user, instead of checking only case sensitive. (veqryn)

* Speeding up lobby login process. (frigoref & veqryn)
